Fix crash when D&D mask with Ctrl key due to the juggler is already ended

There might be a race condition when the juggler is still alive, but
already ended (the two processes are executed by different queued Qt's
signals). We should check for that.

BUG:389037